--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Static (no-js) listing of Remote jobs based on the Remoted GraphQL API",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "generate": "gql-gen --config codegen.yml"
+    "generate": "gql-gen --config codegen.yml",
+    "playground": "ts-node playground",
+    "build-sass": "node-sass ./src/static/styles.scss ./docs/styles.css"
   },
   "repository": {
     "type": "git",
@@ -18,26 +21,32 @@
   ],
   "dependencies": {
     "apollo-boost": "^0.1.28",
+    "cross-fetch": "^3.0.1",
     "graphql": "^14.1.1",
     "react-apollo": "^2.4.1"
   },
   "devDependencies": {
-    "colors": "^1.3.3",
-    "graphql-code-generator": "^0.17.0",
-    "graphql-codegen-introspection": "^0.17.0",
-    "typescript": "^3.1.6",
-    "ts-jest": "^23.10.5",
-    "jest": "^23.6.0",
-    "@types/jest": "^24.0.4",
+    "@types/express": "^4.16.1",
     "@types/graphql": "^14.0.7",
+    "@types/jest": "^24.0.4",
+    "@types/node": "^11.10.4",
+    "colors": "^1.3.3",
+    "express": "^4.16.4",
     "fs-extra": "^7.0.1",
+    "graphql-code-generator": "^0.17.0",
     "graphql-codegen-fragment-matcher": "0.17.0",
+    "graphql-codegen-introspection": "^0.17.0",
     "graphql-codegen-typescript-client": "^0.17.0",
     "graphql-codegen-typescript-common": "^0.17.0",
     "husky": "^1.3.1",
+    "jest": "^23.6.0",
+    "node-sass": "^4.11.0",
+    "nodemon": "^1.18.10",
     "prettier": "1.16.4",
     "pretty-quick": "^1.10.0",
-    "ts-node": "^7.0.1"
+    "ts-jest": "^23.10.5",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.1.6"
   },
   "author": "Andre Pena",
   "license": "MIT",
