--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Static (no-js) listing of Remote jobs based on the Remoted GraphQL API",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "npm run watch-ts && watch-ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate": "gql-gen --config codegen.yml",
     "playground": "ts-node playground",
-    "build-sass": "node-sass ./src/static/styles.scss ./docs/styles.css"
+    "build-sass": "node-sass ./src/static/styles.scss ./docs/styles.css",
+    "watch-sass": "nodemon -e scss -x \"npm run build-sass\"",
+    "watch-ts": "nodemon -e ts -x \"ts-node ./src/index.ts\""
   },
   "repository": {
     "type": "git",
